# avs-device-sdk-intel-speech-enabling-kit

./: .gitignore  CMakeLists.txt  README.md  asound.conf  install_avs_sdk.sh
ADSL/src/: DirectiveSequencer.cpp
AVSCommon/: CMakeLists.txt
AVSCommon/SDKInterfaces/include/AVSCommon/SDKInterfaces/: DialogUXStateObserverInterface.h
AVSCommon/Utils/include/AVSCommon/Utils/: SDKVersion.h
AVSCommon/Utils/include/AVSCommon/Utils/TestLogger/: DirectiveLogger.h  TestLogger.h
AVSCommon/Utils/src/: DirectiveLogger.cpp
ApplicationUtilities/DefaultClient/include/DefaultClient/: DefaultClient.h
ApplicationUtilities/DefaultClient/src/: DefaultClient.cpp
CapabilityAgents/AIP/src/: AudioInputProcessor.cpp
CapabilityAgents/SpeechSynthesizer/src/: SpeechSynthesizer.cpp
ContextManager/src/: ContextManager.cpp
KWD/: CMakeLists.txt
KWD/Hardware/: CMakeLists.txt
KWD/Hardware/HardwareController/: CMakeLists.txt
KWD/Hardware/HardwareController/AlsaController/: CMakeLists.txt
KWD/Hardware/HardwareController/AlsaController/include/AlsaController/: AlsaHardwareController.h
KWD/Hardware/HardwareController/AlsaController/src/: AlsaHardwareController.cpp  CMakeLists.txt
KWD/Hardware/HardwareController/Socket/: CMakeLists.txt
KWD/Hardware/HardwareController/Socket/include/Socket/: SocketHardwareController.h
KWD/Hardware/HardwareController/Socket/src/: CMakeLists.txt  SocketHardwareController.cpp
KWD/Hardware/HardwareController/Socket/test/: CMakeLists.txt  SocketHardwareControllerTest.cpp
KWD/Hardware/HardwareController/include/HardwareController/: AbstractHardwareController.h
KWD/Hardware/HardwareController/src/: CMakeLists.txt
KWD/Hardware/include/Hardware/: HardwareKeywordDetector.h  KeywordDetection.h
KWD/Hardware/src/: CMakeLists.txt  HardwareKeywordDetector.cpp  KeywordDetection.cpp
KWD/Hardware/test/: CMakeLists.txt
Rpi/: install_avs_sdk.sh
SampleApp/: CMakeLists.txt
SampleApp/include/SampleApp/: AipObserver.h  GuiRenderer.h  InteractionManager.h  PortAudioMicrophoneWrapper.h  PortAudioObserver.h  ResetAppTimer.h  SampleApplication.h  StartPortAudioStreamObserver.h  StopPortAudioStreamObserver.h  UIManager.h
SampleApp/src/: AipObserver.cpp  CMakeLists.txt  GuiRenderer.cpp  InteractionManager.cpp  KeywordObserver.cpp  PortAudioMicrophoneWrapper.cpp  PortAudioObserver.cpp  ResetAppTimer.cpp  SampleApplication.cpp  StartPortAudioStreamObserver.cpp  StopPortAudioStreamObserver.cpp  UIManager.cpp  main.cpp
StressTesterApp/: CMakeLists.txt
StressTesterApp/include/StressTesterApp/: Arguments.h  AudioFilePlayer.h  ConnectionObserver.h  KeywordObserver.h  Logger.h  StressTesterApp.h  StressTesterController.h
StressTesterApp/src/: Arguments.cpp  AudioFilePlayer.cpp  CMakeLists.txt  ConnectionObserver.cpp  KeywordObserver.cpp  StressTesterApp.cpp  StressTesterController.cpp  main.cpp
Ubuntu/: automated_install.sh  build.sh  disp_server_back.sh  disp_server_front.sh  install_avs_sdk.sh  startavs  websocketpp.patch
helper_scripts/: build.sh  build_cmake.sh  create_bkc.sh  create_patch.sh  decompress.sh  initalize.sh  kw_socket_server.py  parse_logs.py
tools/AuthServer/: AuthServer.py
